# skypilot_experiments

./: pyproject.toml
examples/spot/: lightning_cifar10.yaml
llm/axolotl/: axolotl-spot.yaml
llm/lorax/: lorax.yaml
llm/tabby/: tabby.yaml
