[tool.poetry]
name = "axotol-skypilot"
version = "0.1.0"
description = "set of experiments to fine tune LLMs using axotol on public clouds accessed through skypilot"
authors = ["Ashwanth Krishnan <aswanth.krshna@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "axotol_skypilot"}]

[tool.poetry.dependencies]
python = "^3.9"
skypilot = {extras = ["aws"], version = "^0.4.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
